--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: Montserrat, sans-serif;
-  background-color: #fafafa;
-  color: #111111;
+  background-color: #2e2e2e;
+  color: #fff;
 }
 
 p,
